created hide and show function for the navigation bar

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1929,6 +1929,11 @@ video {
   --tw-ring-color: rgba(30, 58, 138, var(--tw-ring-opacity));
 }
 
+.active\:text-indigo-500:active {
+  --tw-text-opacity: 1;
+  color: rgba(99, 102, 241, var(--tw-text-opacity));
+}
+
 .group:hover .group-hover\:text-green-500 {
   --tw-text-opacity: 1;
   color: rgba(16, 185, 129, var(--tw-text-opacity));
