--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -630,6 +630,10 @@ video {
   display: table;
 }
 
+.table-cell {
+  display: table-cell;
+}
+
 .hidden {
   display: none;
 }
@@ -962,6 +966,11 @@ video {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .text-center {
