--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -931,6 +931,10 @@ video {
   overflow-y: scroll;
 }
 
+.whitespace-nowrap {
+  white-space: nowrap;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
 }
