added editing to the tables

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1424,6 +1424,11 @@ video {
   color: rgba(29, 78, 216, var(--tw-text-opacity));
 }
 
+.hover\:text-green-700:hover {
+  --tw-text-opacity: 1;
+  color: rgba(4, 120, 87, var(--tw-text-opacity));
+}
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
